Manpage cleanup (automatic step).
Deal with things that are automatically detected by mdoc and my
rudimentary manpage checker scripts:

- Remove trailing whitespace.
- Break sentences.
- Sort sections.
- Sort SEE ALSO xrefs.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 107091]

--- a/bin/auditfilterd/auditfilterd.8
+++ b/bin/auditfilterd/auditfilterd.8
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#2 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditfilterd/auditfilterd.8#3 $
 .\"
 .Dd March 27, 2006
 .Dt AUDITFILTERD 8
@@ -66,12 +66,12 @@ Default audit record source for
 .Sh SEE ALSO
 .Xr audit 8 ,
 .Xr auditd 8
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
 .Sh AUTHORS
 The
 .Nm
 daemon and audit filter APIs were created by Robert Watson.
-.Sh HISTORY
-The OpenBSM implementation was created by McAfee Research, the security
-division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
-It was subsequently adopted by the TrustedBSD Project as the foundation for
-the OpenBSM distribution.
