--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -1,18 +1,18 @@
 .\" Copyright (c) 2004 Apple Computer, Inc.
 .\" All rights reserved.
-.\" 
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
 .\" 1.  Redistributions of source code must retain the above copyright
-.\"     notice, this list of conditions and the following disclaimer. 
+.\"     notice, this list of conditions and the following disclaimer.
 .\" 2.  Redistributions in binary form must reproduce the above copyright
 .\"     notice, this list of conditions and the following disclaimer in the
-.\"     documentation and/or other materials provided with the distribution. 
+.\"     documentation and/or other materials provided with the distribution.
 .\" 3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of
 .\"     its contributors may be used to endorse or promote products derived
-.\"     from this software without specific prior written permission. 
-.\" 
+.\"     from this software without specific prior written permission.
+.\"
 .\" THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND
 .\" ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 .\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#8 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#9 $
 .\"
 .Dd January 24, 2004
 .Dt PRAUDIT 1
@@ -40,7 +40,7 @@
 .Op Ar file ...
 .Sh DESCRIPTION
 The
-.Nm 
+.Nm
 utility prints the contents of the audit trail files to the standard output in
 human-readable form.
 If no filename is specified, the standard input is used
@@ -54,14 +54,14 @@ If this option is not specified,
 every token is displayed on a different line.
 .It Fl r
 Prints the records in their raw, numeric form.
-This option is exclusive from 
+This option is exclusive from
 .Fl s
 .It Fl s
 Prints the tokens in their short form.
 Short text representations for
 record and event type are displayed.
 This option is exclusive from
-.Fl  r
+.Fl r
 .It Fl d Ar del
 Specifies the delimiter.
 The default delimiter is the comma.
@@ -83,6 +83,11 @@ Descriptions of audit events
 .Sh SEE ALSO
 .Xr audit_class 5 ,
 .Xr audit_event 5
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
 .Sh AUTHORS
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
@@ -90,8 +95,3 @@ Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
-.Sh HISTORY
-The OpenBSM implementation was created by McAfee Research, the security
-division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
-It was subsequently adopted by the TrustedBSD Project as the foundation for
-the OpenBSM distribution.
