--- a/libbsm/au_control.3
+++ b/libbsm/au_control.3
@@ -10,7 +10,7 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 
+.\"
 .\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
 .\" ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 .\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_control.3#6 $
 .\"
 .Dd April 19, 2005
 .Dt AU_CONTROL 3
@@ -37,7 +37,7 @@
 .Nm getacflg ,
 .Nm getacna ,
 .Nm getacpol ,
-.Nm au_poltostr
+.Nm au_poltostr ,
 .Nm au_strtopol
 .Nd "Look up information from the audit_control database"
 .Sh LIBRARY
@@ -147,6 +147,11 @@ insufficient room in the passed character buffer for the full string.
 .Sh SEE ALSO
 .Xr libbsm 3 ,
 .Xr audit_control 5
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
 .Sh AUTHORS
 This software was created by Robert Watson, Wayne Salamon, and Suresh
 Krishnaswamy for McAfee Research, the security research division of McAfee,
@@ -154,11 +159,6 @@ Inc., under contract to Apple Computer, Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
-.Sh HISTORY
-The OpenBSM implementation was created by McAfee Research, the security
-division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
-It was subsequently adopted by the TrustedBSD Project as the foundation for
-the OpenBSM distribution.
 .Sh BUGS
 These routines cannot currently distinguish between an entry not being found
 and an error accessing the database.
