--- a/libbsm/au_event.3
+++ b/libbsm/au_event.3
@@ -10,7 +10,7 @@
 .\" 2. Redistributions in binary form must reproduce the above copyright
 .\"    notice, this list of conditions and the following disclaimer in the
 .\"    documentation and/or other materials provided with the distribution.
-.\" 
+.\"
 .\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
 .\" ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 .\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_event.3#4 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_event.3#5 $
 .\"
 .Dd April 19, 2005
 .Dt AU_EVENT 3
@@ -39,7 +39,7 @@
 .Nm getauevnum ,
 .Nm getauevnum_r ,
 .Nm getauevnonam ,
-.Nm getauevnonam_r ,
+.Nm getauevnonam_r
 .Nd "Look up information from the audit_event database"
 .Sh LIBRARY
 .Lb libbsm
@@ -133,6 +133,11 @@ set to provide further error information.
 .Sh SEE ALSO
 .Xr libbsm 3 ,
 .Xr audit_event 5
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
 .Sh AUTHORS
 This software was created by Robert Watson, Wayne Salamon, and Suresh
 Krishnaswamy for McAfee Research, the security research division of McAfee,
@@ -140,11 +145,6 @@ Inc., under contract to Apple Computer, Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
-.Sh HISTORY
-The OpenBSM implementation was created by McAfee Research, the security
-division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
-It was subsequently adopted by the TrustedBSD Project as the foundation for
-the OpenBSM distribution.
 .Sh BUGS
 .Va errno
 is not always properly set following a failure.
