--- a/man/audit_warn.5
+++ b/man/audit_warn.5
@@ -1,18 +1,18 @@
 .\" Copyright (c) 2004 Apple Computer, Inc.
 .\" All rights reserved.
-.\" 
+.\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
 .\" are met:
 .\" 1.  Redistributions of source code must retain the above copyright
-.\"     notice, this list of conditions and the following disclaimer. 
+.\"     notice, this list of conditions and the following disclaimer.
 .\" 2.  Redistributions in binary form must reproduce the above copyright
 .\"     notice, this list of conditions and the following disclaimer in the
-.\"     documentation and/or other materials provided with the distribution. 
+.\"     documentation and/or other materials provided with the distribution.
 .\" 3.  Neither the name of Apple Computer, Inc. ("Apple") nor the names of
 .\"     its contributors may be used to endorse or promote products derived
-.\"     from this software without specific prior written permission. 
-.\" 
+.\"     from this software without specific prior written permission.
+.\"
 .\" THIS SOFTWARE IS PROVIDED BY APPLE AND ITS CONTRIBUTORS "AS IS" AND
 .\" ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 .\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#6 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#7 $
 .\"
 .Dd March 17, 2004
 .Dt AUDIT_WARN 5
@@ -34,20 +34,20 @@
 .Nm audit_warn
 .Nd "alert when audit daemon issues warnings"
 .Sh DESCRIPTION
-.Nm 
-runs when 
+.Nm
+runs when
 .Xr auditd 8
-generates warning messages.  
+generates warning messages.
 .Pp
-The default 
+The default
 .Nm
 is a script whose first parameter is the type of warning; the script
-appends its arguments to 
+appends its arguments to
 .Pa /etc/security/audit_messages .
 Administrators may replace this script: a more comprehensive one would take
 different actions based on the type of warning.
 For example, a low-space warning
-could result in an email message being sent to the administrator.  
+could result in an email message being sent to the administrator.
 .Sh FILES
 .Bl -tag -width "/etc/security/audit_warn" -compact
 .It Pa /etc/security/audit_warn
@@ -55,6 +55,11 @@ could result in an email message being sent to the administrator.
 .El
 .Sh SEE ALSO
 .Xr auditd 8
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
 .Sh AUTHORS
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
@@ -62,8 +67,3 @@ Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
-.Sh HISTORY
-The OpenBSM implementation was created by McAfee Research, the security
-division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
-It was subsequently adopted by the TrustedBSD Project as the foundation for
-the OpenBSM distribution.
