--- a/README
+++ b/README
@@ -76,6 +76,7 @@ to the development of OpenBSM:
     Martin Fong
     Pawel Worach
     Martin Englund
+    Ruslan Ermilov
 
 In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
 Software's FlexeLint tool were used to identify a number of bugs in the
@@ -97,4 +98,4 @@ Information on TrustedBSD may be found on the TrustedBSD home page:
 
     http://www.TrustedBSD.org/
 
-$P4: //depot/projects/trustedbsd/openbsm/README#19 $
+$P4: //depot/projects/trustedbsd/openbsm/README#20 $
