--- a/man/audit_event.5
+++ b/man/audit_event.5
@@ -25,14 +25,14 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#9 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#10 $
 .\"
 .Dd January 24, 2004
 .Dt AUDIT_EVENT 5
 .Os
 .Sh NAME
 .Nm audit_event
-.Nd "contains audit event descriptions"
+.Nd "audit event descriptions"
 .Sh DESCRIPTION
 The
 .Nm
@@ -40,16 +40,15 @@ file contains descriptions of the auditable events on the system.
 Each line maps an audit event number to a name, a description, and a class.
 Entries are of the form:
 .Pp
-.Dl eventnum:eventname:description:eventclass
+.Sm off
+.D1 Ar eventnum : eventname : description : eventclass
+.Sm on
 .Pp
 Each
-.Vt eventclass
+.Ar eventclass
 should have a corresponding entry in the
-.Pa audit_class
-file.
-See
 .Xr audit_class 5
-for details.
+file.
 .Pp
 Example entries in this file are:
 .Bd -literal -offset indent
@@ -59,7 +58,7 @@ Example entries in this file are:
 3:AUE_OPEN:open(2):fa
 .Ed
 .Sh FILES
-.Bl -tag -width "/etc/security/audit_event" -compact
+.Bl -tag -width ".Pa /etc/security/audit_event" -compact
 .It Pa /etc/security/audit_event
 .El
 .Sh SEE ALSO
@@ -70,9 +69,13 @@ division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
+.An -nosplit
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
-Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+Additional authors include
+.An Wayne Salamon ,
+.An Robert Watson ,
+and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
