--- a/man/audit_user.5
+++ b/man/audit_user.5
@@ -25,20 +25,20 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_user.5#8 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_user.5#9 $
 .\"
 .Dd February 5, 2006
 .Dt AUDIT_USER 5
 .Os
 .Sh NAME
 .Nm audit_user
-.Nd "specifies events to be audited for the given users"
+.Nd "events to be audited for given users"
 .Sh DESCRIPTION
 The
 .Nm
 file specifies which audit event classes are to be audited for the given users.
 If specified, these flags are combined with the system-wide audit flags in the
-.Pa audit_control
+.Xr audit_control 5
 file to determine which classes of events to audit for that user.
 These settings take effect when the user logs in.
 .Pp
@@ -46,12 +46,12 @@ Each line maps a user name to a list of classes that should be audited and a
 list of classes that should not be audited.
 Entries are of the form:
 .Pp
-.Dl username:alwaysaudit:neveraudit
+.D1 Ar username Ns : Ns Ar alwaysaudit Ns : Ns Ar neveraudit
 .Pp
 In the format above,
-.Vt alwaysaudit
+.Ar alwaysaudit
 is a set of event classes that are always audited, and
-.Vt neveraudit
+.Ar neveraudit
 is a set of event classes that should not be audited.
 These sets can indicate
 the inclusion or exclusion of multiple classes, and whether to audit successful
@@ -67,14 +67,16 @@ jdoe:-fc,ad:+fw
 .Ed
 .Pp
 These settings would cause login/logout and administrative events that
-succeed on behalf of user root to be audited.
+succeed on behalf of user
+.Dq Li root
+to be audited.
 No failure events are audited.
 For the user
-.Em jdoe ,
+.Dq Li jdoe ,
 failed file creation events are audited, administrative events are
 audited, and successful file write events are never audited.
 .Sh FILES
-.Bl -tag -width "/etc/security/audit_user" -compact
+.Bl -tag -width ".Pa /etc/security/audit_user" -compact
 .It Pa /etc/security/audit_user
 .El
 .Sh SEE ALSO
@@ -85,9 +87,13 @@ division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
+.An -nosplit
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
-Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+Additional authors include
+.An Wayne Salamon ,
+.An Robert Watson ,
+and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
