--- a/man/audit_warn.5
+++ b/man/audit_warn.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#7 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#8 $
 .\"
 .Dd March 17, 2004
 .Dt AUDIT_WARN 5
@@ -34,7 +34,9 @@
 .Nm audit_warn
 .Nd "alert when audit daemon issues warnings"
 .Sh DESCRIPTION
+The
 .Nm
+script
 runs when
 .Xr auditd 8
 generates warning messages.
@@ -49,7 +51,7 @@ different actions based on the type of warning.
 For example, a low-space warning
 could result in an email message being sent to the administrator.
 .Sh FILES
-.Bl -tag -width "/etc/security/audit_warn" -compact
+.Bl -tag -width ".Pa /etc/security/audit_messages" -compact
 .It Pa /etc/security/audit_warn
 .It Pa /etc/security/audit_messages
 .El
@@ -61,9 +63,13 @@ division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
+.An -nosplit
 This software was created by McAfee Research, the security research division
 of McAfee, Inc., under contract to Apple Computer Inc.
-Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+Additional authors include
+.An Wayne Salamon ,
+.An Robert Watson ,
+and SPARTA Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
