Additional cross-referencing of other man pages.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 107303]

--- a/man/audit_class.5
+++ b/man/audit_class.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_class.5#9 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_class.5#10 $
 .\"
 .Dd January 24, 2004
 .Dt AUDIT_CLASS 5
@@ -57,6 +57,11 @@ Example entries in this file are:
 .Bl -tag -width ".Pa /etc/security/audit_class" -compact
 .It Pa /etc/security/audit_class
 .El
+.Sh SEE ALSO
+.Xr audit 4 ,
+.Xr audit_control 5 ,
+.Xr audit_event 5 ,
+.Xr audit_user 5
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
