--- a/man/audit_event.5
+++ b/man/audit_event.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#10 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#11 $
 .\"
 .Dd January 24, 2004
 .Dt AUDIT_EVENT 5
@@ -62,7 +62,10 @@ Example entries in this file are:
 .It Pa /etc/security/audit_event
 .El
 .Sh SEE ALSO
-.Xr audit_class 5
+.Xr audit 4 ,
+.Xr audit_class 5 ,
+.Xr audit_control 5 ,
+.Xr audit_user 5
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
