--- a/man/audit_control.5
+++ b/man/audit_control.5
@@ -26,7 +26,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_control.5#15 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_control.5#16 $
 .\"
 .Dd January 4, 2006
 .Dt AUDIT_CONTROL 5
@@ -185,7 +185,9 @@ file size.
 .It Pa /etc/security/audit_control
 .El
 .Sh SEE ALSO
+.Xr audit 4 ,
 .Xr audit_class 5 ,
+.Xr audit_event 5 ,
 .Xr audit_user 5 ,
 .Xr audit 8 ,
 .Xr auditd 8
