--- a/man/audit_warn.5
+++ b/man/audit_warn.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#8 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_warn.5#9 $
 .\"
 .Dd March 17, 2004
 .Dt AUDIT_WARN 5
@@ -56,6 +56,7 @@ could result in an email message being sent to the administrator.
 .It Pa /etc/security/audit_messages
 .El
 .Sh SEE ALSO
+.Xr audit 4 ,
 .Xr auditd 8
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
