Further cross-referencing, and fix one or two I botched section number-wise in the last pass.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 107304]

--- a/bin/audit/audit.8
+++ b/bin/audit/audit.8
@@ -29,7 +29,7 @@
 .\"
 .\" @APPLE_BSD_LICENSE_HEADER_END@
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#8 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/audit/audit.8#9 $
 .\"
 .Dd October 2, 2006
 .Dt AUDIT 8
@@ -69,6 +69,7 @@ daemon must already be running.
 Audit policy file used to configure the auditing system.
 .El
 .Sh SEE ALSO
+.Xr audit 4 ,
 .Xr audit_control 5 ,
 .Xr auditd 8
 .Sh HISTORY
