--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#10 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#11 $
 .\"
 .Dd October 3, 2006
 .Dt PRAUDIT 1
@@ -93,6 +93,9 @@ Descriptions of audit event classes.
 Descriptions of audit events.
 .El
 .Sh SEE ALSO
+.Xr auditreduce 1 ,
+.Xr audit 4 ,
+.Xr auditpipe 4 ,
 .Xr audit_class 5 ,
 .Xr audit_event 5
 .Sh HISTORY
