--- a/bin/auditd/auditd.8
+++ b/bin/auditd/auditd.8
@@ -29,7 +29,7 @@
 .\"
 .\" @APPLE_BSD_LICENSE_HEADER_END@
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#11 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/auditd.8#12 $
 .\"
 .Dd October 2, 2006
 .Dt AUDITD 8
@@ -96,6 +96,8 @@ and
 and are no longer available as arguments to
 .Nm .
 .Sh SEE ALSO
+.Xr audit 4 ,
+.Xr audit_control 5 ,
 .Xr audit 8
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
