--- a/man/audit_user.5
+++ b/man/audit_user.5
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_user.5#11 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_user.5#12 $
 .\"
 .Dd February 5, 2006
 .Dt AUDIT_USER 5
@@ -86,9 +86,9 @@ ID.
 The audit identifier is set as part of the user credential context as part of
 login, and typically does not change as a result of running setuid or setgid
 applications, such as
-.Xr su 8 .
+.Xr su 1 .
 This has the advantage that events that occur after running
-.Xr su 8
+.Xr su 1
 can be audited to the original authenticated user, as required by CAPP, but
 may be surprising if not expected.
 .Sh FILES
@@ -97,11 +97,11 @@ may be surprising if not expected.
 .El
 .Sh SEE ALSO
 .Xr login 1 ,
+.Xr su 1 ,
 .Xr audit 4 ,
 .Xr audit_class 5 ,
 .Xr audit_control 5 ,
-.Xr audit_event 5 ,
-.Xr su 8
+.Xr audit_event 5
 .Sh HISTORY
 The OpenBSM implementation was created by McAfee Research, the security
 division of McAfee Inc., under contract to Apple Computer Inc.\& in 2004.
