--- a/libbsm/au_user.3
+++ b/libbsm/au_user.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_user.3#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_user.3#6 $
 .\"
 .Dd April 19, 2005
 .Dt AU_USER 3
@@ -37,22 +37,22 @@
 .Nm getauusernam_r ,
 .Nm au_user_mask ,
 .Nm getfauditflags
-.Nd "Look up information from the audit_user database"
+.Nd "look up information from the audit_user database"
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
 .In libbsm.h
 .Ft void
-.Fn setauuser "void"
+.Fn setauuser void
 .Ft void
-.Fn endauuser "void"
-.Ft struct au_user_ent *
-.Fn getauuserent "void"
-.Ft struct au_user_ent *
-.Fn getauuserent_r "struct au_user_ent *u" "void"
-.Ft struct au_user_ent *
+.Fn endauuser void
+.Ft "struct au_user_ent *"
+.Fn getauuserent void
+.Ft "struct au_user_ent *"
+.Fn getauuserent_r "struct au_user_ent *u"
+.Ft "struct au_user_ent *"
 .Fn getauusernam "const char *name"
-.Ft struct au_user_ent *
+.Ft "struct au_user_ent *"
 .Fn getauusernam_r "struct au_user_ent *u" "const char *name"
 .Ft int
 .Fn au_user_mask "char *username" "au_mask_t *mask_p"
@@ -65,41 +65,51 @@ database, which describes per-user audit configuration.
 Audit user entries are described by a
 .Vt au_user_ent ,
 which stores the user's name in
-.Dv au_name ,
+.Va au_name ,
 events to always audit in
-.Dv au_always ,
+.Va au_always ,
 and events never to audit
-.Dv au_never .
+.Va au_never .
 .Pp
+The
 .Fn getauuserent
+function
 returns the next user found in the
 .Xr audit_user 5
 database, or the first if the function has not yet been called.
 .Dv NULL
 will be returned if no further records are available.
 .Pp
+The
 .Fn getauusernam
+function
 looks up a user by name.
 .Dv NULL
 will be returned if no matching class can be found.
 .Pp
+The
 .Fn setauuser
+function
 resets the iterator through the
 .Xr audit_user 5
 database, causing the next call to
 .Fn getauuserent
 to start again from the beginning of the file.
 .Pp
+The
 .Fn endauuser
+function
 closes the
 .Xr audit_user 5
 database, if open.
 .Pp
-.Nm au_user_mask
+The
+.Fn au_user_mask
+function
 calculates a new session audit mask to be returned via
-.Dv mask_p
+.Fa mask_p
 for the user identified by
-.Dv username .
+.Fa username .
 If the user audit configuration is not found, the default system audit
 properties returned by
 .Xr getacflg 3 .
@@ -107,7 +117,9 @@ The resulting mask may be set via a call to
 .Xr setaudit 3
 or related variants.
 .Pp
-.Nm getfauditflags
+The
+.Fn getfauditflags
+function
 XXXXXXXXXXXXXXXXX
 .Sh SEE ALSO
 .Xr getacflg 3 ,
@@ -120,8 +132,13 @@ division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
-This software was created by Robert Watson, Wayne Salamon, and Suresh
-Krishnaswamy for McAfee Research, the security research division of McAfee,
+.An -nosplit
+This software was created by
+.An Robert Watson ,
+.An Wayne Salamon ,
+and
+.An Suresh Krishnaswamy
+for McAfee Research, the security research division of McAfee,
 Inc., under contract to Apple Computer, Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
