--- a/libbsm/au_io.3
+++ b/libbsm/au_io.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#3 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_io.3#4 $
 .\"
 .Dd April 19, 2005
 .Dt AU_IO 3
@@ -32,7 +32,7 @@
 .Nm au_fetch_tok ,
 .Nm au_print_tok ,
 .Nm au_read_rec
-.Nd "Perform I/O involving an audit record"
+.Nd "perform I/O involving an audit record"
 .Sh LIBRARY
 .Lb libbsm
 .Sh SYNOPSIS
@@ -48,31 +48,37 @@ These interfaces support input and output (I/O) involving audit records,
 internalizing an audit record from a byte stream, converting a token to
 either a raw or default string, and reading a single record from a file.
 .Pp
+The
 .Fn au_fetch_tok
+function
 reads a token from the passed buffer
-.Va buf
+.Fa buf
 of length
-.Va len
+.Fa len
 bytes, and returns a pointer to the token via
-.Va tok .
+.Fa tok .
 .Pp
+The
 .Fn au_print_tok
+function
 prints a string form of the token
-.Va tok
+.Fa tok
 to the file output stream
-.Va outfp,
+.Fa outfp ,
 either in default mode, or raw mode if
-.Va raw
+.Fa raw
 is set non-zero.
 The delimiter
-.Va del
+.Fa del
 is used when printing.
 .Pp
+The
 .Fn au_read_rec
+function
 reads an audit record from the file stream
-.Va fp ,
+.Fa fp ,
 and returns an allocated memory buffer containing the record via
-.Va *buf ,
+.Fa *buf ,
 which must be freed by the caller using
 .Xr free 3 .
 .Pp
@@ -93,10 +99,12 @@ would be used to free the record buffer.
 Finally, the source stream would be closed by a call to
 .Xr fclose 3 .
 .Sh RETURN VALUES
+The
 .Fn au_fetch_tok
 and
 .Fn au_read_rec
-return 0 on success, or -1 on failure along with additional error information
+functions
+return 0 on success, or \-1 on failure along with additional error information
 returned via
 .Va errno .
 .Sh SEE ALSO
@@ -108,12 +116,19 @@ division of McAfee Inc., under contract to Apple Computer, Inc., in 2004.
 It was subsequently adopted by the TrustedBSD Project as the foundation for
 the OpenBSM distribution.
 .Sh AUTHORS
-This software was created by Robert Watson, Wayne Salamon, and Suresh
-Krishnaswamy for McAfee Research, the security research division of McAfee,
+.An -nosplit
+This software was created by
+.An Robert Watson ,
+.An Wayne Salamon ,
+and
+.An Suresh Krishnaswamy
+for McAfee Research, the security research division of McAfee,
 Inc., under contract to Apple Computer, Inc.
 .Pp
 The Basic Security Module (BSM) interface to audit records and audit event
 stream format were defined by Sun Microsystems.
 .Sh BUGS
+The
 .Va errno
+variable
 may not always be properly set in the event of an error.
